--- a/pages/page6.html
+++ b/pages/page6.html
@@ -1,5 +1,6 @@
 <div style="margin: 30px 30px 40px 30px;">
               <h4>I. Les goûts des Parisiens : <br/>Max et Lili, Tintin et Mickey, stars du box-office</h4>
               <hr class="star-dark mb-5">
+  Pourquoi les Parisiens vont-ils à la bibliothèque ?
               <div id="text_to_change"></div>
 <span class="page-number">6</span>
