--- a/pages/page16.html
+++ b/pages/page16.html
@@ -5,7 +5,7 @@
                                
                                 <p class="premier">Les bibliothèques proposent aussi un certain nombre de <b>services adaptés aux personnes malvoyantes</b> : livres en gros caractère, livres sonores, etc. <br>
                                   <br>
-                                  Cependant, toutes les bibliothèques et a fortiori tous les arrondissements ne disposent pas du même catalogue. Ainsi, les arrondissements du centre de Paris sont, cette fois-ci, relativement sous-dotés (hormis le 5e arrondissement, à nouveau dans le haut du panier) alors que <b>les arrondissements périphériques apparaissent mieux dotés</b> : 7300 livres pour personnes malvoyantes dans le 18e, près de 8&nbsp;000 dans le 19e et près de 11 000 dans le 15e. 
+                                  Cependant, toutes les bibliothèques et a fortiori tous les arrondissements ne disposent pas du même catalogue. Ainsi, les arrondissements du centre de Paris sont, cette fois-ci, relativement sous-dotés (hormis le 5e arrondissement, à nouveau dans le haut du panier) alors que <b>les arrondissements périphériques apparaissent mieux dotés</b> : 7&nbsp;300 livres pour personnes malvoyantes dans le 18e, près de 8&nbsp;000 dans le 19e et près de 11&nbsp;000 dans le 15e. 
                                 </p>
                       </div>
 </div>
