--- a/pages/page18.html
+++ b/pages/page18.html
@@ -7,7 +7,9 @@
                                    <br>
                                    <br>
                                    <br>
-                                  Ce livre vous a plu ? N'hésitez pas à le partager sur les réseaux sociaux ! 
+                                   Un livre conçu grâce aux données mises à disposition en <i>open data</i> par la Ville de Paris :<a href="https://opendata.paris.fr/explore/?sort=modified&q=bibliothèque">Retrouvez-les ici !</a> 
+                                  <br>
+                                  Ce parcours vous a plu ? N'hésitez pas à le partager sur les réseaux sociaux ! 
                                 </p>
                      <div id="fb-root"></div>
 <script>(function(d, s, id) {
