--- a/index.html
+++ b/index.html
@@ -365,7 +365,11 @@ yepnope({
           
           <div class="col-md-4 mb-5 mb-lg-0" align="center">
             <h4 class="text-uppercase mb-4">À propos</h4>
-            <p class="lead mb-0">BibliParis est un projet de visualisation de données dans le cadre du cours "Dataviz" de l'ENSAE Paristech.</p>
+            <p class="lead mb-0">BibliParis est un projet de visualisation de données dans le cadre du cours "Dataviz" de l'ENSAE Paristech. <br>
+		  <br>
+		  Mentions : cartes : <a href="http://carto.com/" style="color:red;">CARTO</a> - Template : <a href="http://getbootstrap.com/" style="color:red;">Bootstrap</a> - Flipbook : <a href="ttp://www.turnjs.com/#samples/steve-jobs " style="color:red;">turn.js</a> 
+		    - Icônes : <a href="http://https://thenounproject.com/" style="color:red;">The NOUN Project</a>
+		  </p>
           </div>
         </div>
       </div>
