--- a/index.html
+++ b/index.html
@@ -365,10 +365,10 @@ yepnope({
           
           <div class="col-md-4 mb-5 mb-lg-0" align="center">
             <h4 class="text-uppercase mb-4">À propos</h4>
-            <p class="lead mb-0">BibliParis est un projet de visualisation de données dans le cadre du cours "Dataviz" de l'ENSAE Paristech. <br>
+            <p class="lead mb-0">BibliParis est un projet réalisé dans le cadre du cours "Dataviz" de l'ENSAE Paristech par Victor Amoureux, Stéphane Gloriant, Marie Khater et Julien Sauvan. <br>
 		  <br>
-		  Mentions : cartes : <a href="http://carto.com/" style="color:white;">CARTO</a> - Template : <a href="http://getbootstrap.com/" style="color:white;">Bootstrap</a> - Flipbook : <a href="ttp://www.turnjs.com/#samples/steve-jobs " style="color:white;">turn.js</a> 
-		    - Icônes : <a href="http://https://thenounproject.com/" style="color:white;">The NOUN Project</a>
+		  Mentions - cartes&nbsp;:&nbsp;<a href="http://carto.com/" style="color:blue;">CARTO</a> - Template&nbsp;:&nbsp;<a href="http://getbootstrap.com/" style="color:blue;">Bootstrap</a> - Flipbook&nbsp;:&nbsp;<a href="ttp://www.turnjs.com/#samples/steve-jobs " style="color:blue;">turn.js</a> 
+		    - Icônes&nbsp;:&nbsp;<a href="http://https://thenounproject.com/" style="color:blue;">The NOUN Project</a>
 		  </p>
           </div>
         </div>
