--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ yepnope({
             <h4 class="text-uppercase mb-4">À propos</h4>
             <p class="lead mb-0">BibliParis est un projet réalisé dans le cadre du cours "Dataviz" de l'ENSAE Paristech par Victor Amoureux, Stéphane Gloriant, Marie Khater et Julien Sauvan. <br>
 		  <br>
-		  Mentions - cartes&nbsp;:&nbsp;<a href="http://carto.com/" style="color:blue;">CARTO</a> - Template&nbsp;:&nbsp;<a href="http://getbootstrap.com/" style="color:blue;">Bootstrap</a> - Flipbook&nbsp;:&nbsp;<a href="ttp://www.turnjs.com/#samples/steve-jobs " style="color:blue;">turn.js</a> 
+		  Mentions - cartes&nbsp;:&nbsp;<a href="http://carto.com/">CARTO</a> - Template&nbsp;:&nbsp;<a href="http://getbootstrap.com/" style="color:blue;">Bootstrap</a> - Flipbook&nbsp;:&nbsp;<a href="ttp://www.turnjs.com/#samples/steve-jobs " style="color:blue;">turn.js</a> 
 		    - Icônes&nbsp;:&nbsp;<a href="http://https://thenounproject.com/" style="color:blue;">The NOUN Project</a>
 		  </p>
           </div>
