--- a/index.html
+++ b/index.html
@@ -369,9 +369,9 @@ yepnope({
 		  <br>
 		  Mentions : <br> 
 		    Cartes&nbsp;:&nbsp;<a href="http://carto.com/">CARTO</a> <br>
-		    Template&nbsp;:&nbsp;<a href="http://getbootstrap.com/" style="color:blue;">Bootstrap</a> <br>
-		    Flipbook&nbsp;:&nbsp;<a href="ttp://www.turnjs.com/#samples/steve-jobs " style="color:blue;">turn.js</a> <br>
-		    Icônes&nbsp;:&nbsp;<a href="http://https://thenounproject.com/" style="color:blue;">The NOUN Project</a>
+		    Template&nbsp;:&nbsp;<a href="http://getbootstrap.com/">Bootstrap</a> <br>
+		    Flipbook&nbsp;:&nbsp;<a href="ttp://www.turnjs.com/#samples/steve-jobs" >turn.js</a> <br>
+		    Icônes&nbsp;:&nbsp;<a href="http://https://thenounproject.com/">The NOUN Project</a>
 		  </p>
           </div>
         </div>
