--- a/index.html
+++ b/index.html
@@ -367,10 +367,12 @@ yepnope({
             <h4 class="text-uppercase mb-4">À propos</h4>
             <p class="lead mb-0">BibliParis est un projet réalisé dans le cadre du cours "Dataviz" de l'ENSAE Paristech par Victor Amoureux, Stéphane Gloriant, Marie Khater et Julien Sauvan. <br>
 		  <br>
-		  Mentions : <br> 
+		 <h4 class="text-uppercase mb-4">Mentions</h4>
+		    Données&nbsp;:&nbsp;<a href="https://opendata.paris.fr/explore/?sort=modified&q=bibliothèque">Open Data Paris</a> <br>
 		    Cartes&nbsp;:&nbsp;<a href="http://carto.com/">CARTO</a> <br>
 		    Template&nbsp;:&nbsp;<a href="http://getbootstrap.com/">Bootstrap</a> <br>
-		    Flipbook&nbsp;:&nbsp;<a href="ttp://www.turnjs.com/#samples/steve-jobs" >turn.js</a> <br>
+		    Flipbook&nbsp;:&nbsp;<a href="http://www.turnjs.com/#samples/steve-jobs" >
+		    </a> <br>
 		    Icônes&nbsp;:&nbsp;<a href="http://https://thenounproject.com/">The NOUN Project</a>
 		  </p>
           </div>
