--- a/pages/page18.html
+++ b/pages/page18.html
@@ -7,7 +7,7 @@
                                    <br>
                                    <br>
                                    <br>
-                                   Un livre conçu grâce aux données mises à disposition en <i>open data</i> par la Ville de Paris. <a href="https://opendata.paris.fr/explore/?sort=modified&q=bibliothèque" style="color:blue;">Retrouvez-les ici !</a> <br>
+                                   Un livre conçu grâce aux données mises à disposition en <i>open data</i> par la Ville de Paris. <a href="https://opendata.paris.fr/explore/?sort=modified&q=bibliothèque">Retrouvez-les ici !</a> <br>
                                   <br>
                                   Ce parcours vous a plu ? N'hésitez pas à le partager sur les réseaux sociaux ! 
                                 </p>
