--- a/pages/page6.html
+++ b/pages/page6.html
@@ -2,8 +2,8 @@
               <h4>I. Les goûts des Parisiens : <br/>Max et Lili, Tintin et Mickey, stars du box-office</h4>
               <hr class="star-dark mb-5">
   Pourquoi les Parisiens vont-ils à la bibliothèque ?
-   <br />  Principalement pour se détendre : les revues et bandes dessinées représentent 76 % des emprunts parmi les 1 000 titres les plus empruntés en 2012. <br/>Les revues à ligne éditoriales marquées politiquement restent minoritaires avec seulement 10% des emprunts (également répartis entre droite et gauche en rouge et bleu respectivement).
- <br />  Les principales références  dans les bandes dessinées sont intemporelles : chez les adultes, Tintin, Astérix et Obélix sont aux premières loges, mais on trouve aussi le manga Fairy Tail, très populaire,";
-	 <br />  Les lecteurs des bibliothèques empruntent quand même des livres ! Les auteurs à succès y sont bien représentés : Fred Vargas, Guillaume Musso, etc. <br />  Chez les enfants, c’est la série des Max et Lili qui est incontestablement à la première place (avec 66% des emprunts de livres jeunesse rerésenté en bleu), On notera cependant l’absence de 50 shades of grey, paru cette année-là : conservatisme des bibliothèques ou timidité des usagers ?
+   <br />   <br />  Principalement pour se détendre : les revues et bandes dessinées représentent 76 % des emprunts parmi les 1 000 titres les plus empruntés en 2012. <br/>Les revues à ligne éditoriales marquées politiquement restent minoritaires avec seulement 10% des emprunts (également répartis entre droite et gauche en rouge et bleu respectivement).
+ <br />   <br />  Les principales références  dans les bandes dessinées sont intemporelles : chez les adultes, Tintin, Astérix et Obélix sont aux premières loges, mais on trouve aussi le manga Fairy Tail, très populaire,";
+	 <br />  <br />  Les lecteurs des bibliothèques empruntent quand même des livres ! Les auteurs à succès y sont bien représentés : Fred Vargas, Guillaume Musso, etc. <br />  Chez les enfants, c’est la série des Max et Lili qui est incontestablement à la première place (avec 66% des emprunts de livres jeunesse rerésenté en bleu), On notera cependant l’absence de 50 shades of grey, paru cette année-là : conservatisme des bibliothèques ou timidité des usagers ?
               <div id="text_to_change"></div>
 <span class="page-number">6</span>
