--- a/index_backup.html
+++ b/index_backup.html
@@ -57,7 +57,7 @@
         <hr class="star-light">
         <h2 class="font-weight-light mb-0">Un projet en cours de construction...</h2>
         <br>
-        <p class="lead mb-0">Vous trouverez dans cette bibliothèque numérique quelques ouvrages vous contant une histoire de Paris à travers ses bibliothèques. À l''heure du digital, quelle place existe-t-il encore pour les bibliothèques de la Ville Lumière ? Ces lieux sont-ils encore des axes majeurs dans la diffusion des connaissances ? Observe-t-on des inégalités d'accès à cette connaissance ? <br> Pour répondre à ces questions, nous utiliserons les données publiques fournies par la Mairie de Paris sur les différentes bibliothèques et habitudes de consommation liées à celles-ci.</p>
+        <p class="lead mb-0">Que nous apprennent les bibliothèques municipales sur Paris et ses habitants ? Nous avons exploré les données des 57 bibliothèques de prêt pour en savoir plus !</p>
       </div>
     </header>
 
