--- a/pages/page6.html
+++ b/pages/page6.html
@@ -3,7 +3,10 @@
               <hr class="star-dark mb-5">
 	<div id="" style="overflow-y: auto; height:400px;">
   <p class="premier"><span class="lettrine">P</span>ourquoi les Parisiens vont-ils à la bibliothèque ? Principalement <b>pour se détendre</b> : les revues et bandes dessinées représentent 76&nbsp;% des emprunts parmi les 1&nbsp;000 titres les plus empruntés en 2012. <br/>Les revues à ligne éditoriales marquées politiquement restent minoritaires avec seulement 10&nbsp;% des emprunts (également répartis entre droite et gauche en rouge et bleu respectivement).
- <br />   <br />  Dans les bandes dessinées, on retrouve les grands classiques : <b>Tintin, Astérix et Obélix</b> sont aux premières loges, mais on trouve aussi le manga Fairy Tail, très populaire.
-	 <br />  <br />  Les lecteurs des bibliothèques empruntent quand même des livres ! Les auteurs à succès y sont bien représentés : Fred Vargas, Guillaume Musso, etc. <br />  Chez les enfants, c’est <b>la série des Max et Lili qui est incontestablement à la première place</b> (avec 66% des emprunts de livres jeunesse : voir les bulles en bleu dans les livres jeunesse), On notera cependant l’absence de <i>50 shades of grey</i>, paru cette année-là : conservatisme des bibliothèques ou timidité des usagers ?
+ <br />   <br />  Dans les bandes dessinées, on retrouve les grands classiques : <b>Tintin, Astérix et Obélix</b> sont aux premières loges, mais on trouve aussi le manga Fairy Tail, très populaire. 
+	 <br />  <br />  Les lecteurs des bibliothèques empruntent quand même des livres !  Chez les enfants, c’est <b>la série des Max et Lili qui est incontestablement à la première place</b> (avec 66% des emprunts de livres jeunesse : voir les bulles coloriées en bleu). 
+	  <br>
+	  Chez les adultes, les auteurs à succès y sont bien représentés : <b>Fred Vargas, Guillaume Musso, etc. </b> <br>
+	  On notera cependant l’absence de <i>50 shades of grey</i>, paru cette année-là : conservatisme des bibliothèques ou timidité des usagers ?
               <div id="text_to_change"></div>
 <span class="page-number">6</span>
