--- a/pages/page6.html
+++ b/pages/page6.html
@@ -6,8 +6,8 @@
 	  <br>
 	  Les revues à ligne éditoriales marquées politiquement restent minoritaires avec seulement 10&nbsp;% des emprunts (également répartis entre droite et gauche en rouge et bleu respectivement). On retrouve davantage d'emprunts dans les revues génériques : <i>Elle</i>, <i>Paris Match</i>, mais aussi <i>Micro hebdo</i>! 
  <br />   <br />  Dans les bandes dessinées, on retrouve les grands classiques : <b>Tintin, Astérix et Obélix</b> sont aux premières loges, mais on trouve aussi le manga Fairy Tail, très populaire. 
-	 <br />  <br />  Les lecteurs des bibliothèques empruntent quand même des livres !  Chez les enfants, c’est <b>la série des Max et Lili qui est incontestablement à la première place</b> (avec 66% des emprunts de livres jeunesse : voir les bulles coloriées en bleu). 
-	  <br>
+	 <br />  <br />  Les lecteurs des bibliothèques empruntent quand même des livres !  Chez les enfants, c’est <b>la série des Max et Lili qui est incontestablement à la première place</b> (avec 66% des emprunts de livres jeunesse : voir les bulles coloriées en bleu). <br>
+	  <br> 
 	  Chez les adultes, les auteurs à succès y sont bien représentés : <b>Fred Vargas, Guillaume Musso, etc. </b> <br>
 	  On notera cependant l’absence de <i>50 shades of grey</i>, paru cette année-là : conservatisme des bibliothèques ou timidité des usagers ?
               <div id="text_to_change"></div>
