--- a/pages/page7.html
+++ b/pages/page7.html
@@ -1,4 +1,8 @@
                                 <!-- Dataviz bubble -->
+                  <div style="margin: 30px 30px 40px 30px;">
+                  <h4>I. Les goûts des Parisiens : <br/>Max et Lili, Tintin et Mickey, stars du box-office</h4>
+                  <hr class="star-dark mb-5">
+	                <div id="" style="overflow-y: auto; height:400px;"></div>
                   <div id="tooltip"></div>
                   <svg id="bubble" width="444" height="600" style="/* background: rgb(255, 255, 255); */"></svg>
                      
