--- a/pages/page6.html
+++ b/pages/page6.html
@@ -2,7 +2,7 @@
               <h4>I. Les goûts des Parisiens : <br/>Max et Lili, Tintin et Mickey, stars du box-office</h4>
               <hr class="star-dark mb-5">
 	<div id="" style="overflow-y: auto; height:325px;">
-  <p class="premier"><span class="lettrine">P</span>ourquoi les Parisiens vont-ils à la bibliothèque ? Apparemment <b>pour se détendre</b> : les revues et bandes dessinées représentent 76&nbsp;% des emprunts parmi les 1&nbsp;000 titres les plus empruntés en 2012. <br/>
+  <p class="premier"><span class="lettrine">P</span>ourquoi les Parisiens vont-ils à la bibliothèque ? Appa&shyremment <b>pour se détendre</b> : les revues et bandes dessinées représentent 76&nbsp;% des emprunts parmi les 1&nbsp;000 titres les plus empruntés en 2012. <br/>
 	  <br>
 	  Les revues à ligne éditoriales marquées politiquement restent minoritaires avec seulement 10&nbsp;% des emprunts (également répartis entre droite et gauche en rouge et bleu respectivement). On retrouve davantage d'emprunts dans les revues génériques : <i>Elle</i>, <i>Paris Match</i>, mais aussi <i>Micro hebdo</i> ! 
  <br />   <br />  Dans les bandes dessinées, on retrouve les grands classiques : <b>Tintin, Astérix et Obélix</b> sont aux premières loges, mais on trouve aussi le manga Fairy Tail, très populaire. 
