--- a/pages/page7.html
+++ b/pages/page7.html
@@ -1,10 +1,8 @@
                                 <!-- Dataviz bubble -->
                   <div style="margin: 30px 30px 40px 30px;">
-                  <h4>I. Les goûts des Parisiens : <br/>Max et Lili, Tintin et Mickey, stars du box-office</h4>
-                  <hr class="star-dark mb-5">
-	                <div id="" style="overflow-y: auto; height:400px;"></div>
+			  <h4>Les goûts des Parisiens </h4></div>
                   <div id="tooltip"></div>
-                  <svg id="bubble" width="444" height="600" style="/* background: rgb(255, 255, 255); */"></svg>
+                  <svg id="bubble" width="444" height="400" style="/* background: rgb(255, 255, 255); */"></svg>
                      
             
      <!-- Bubble dataviz JavaScript -->
