--- a/pages/page9.html
+++ b/pages/page9.html
@@ -2,7 +2,7 @@
 <div class="book-content">
  <iframe width="100%" height="450" frameborder="0" src="https://victoramoureux.carto.com/builder/07101633-7f3f-4278-a324-f75ffc1679ad/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>  
   </body>
-Blablabla
+<i><small>NB: pour faire apparaître la carte souhaitée, cliquer sur "Legends" puis cocher la bonne case ; attention une seule case à la fois doit être cochée !</i></small>. 
 </html>
 
 </div>  
