--- a/pages/page9.html
+++ b/pages/page9.html
@@ -1,8 +1,8 @@
  <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" />
 <div class="book-content">
- <iframe width="100%" height="425" frameborder="0" src="https://victoramoureux.carto.com/builder/07101633-7f3f-4278-a324-f75ffc1679ad/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>  
+ <iframe width="100%" height="415" frameborder="0" src="https://victoramoureux.carto.com/builder/07101633-7f3f-4278-a324-f75ffc1679ad/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>  
   </body>
-<i><small>NB: pour faire apparaître la carte souhaitée, cliquer sur "Legends" puis cocher la bonne case ; attention une seule case à la fois doit être cochée !</i></small>. 
+<i><small>NB: pour faire apparaître la carte souhaitée, cliquer sur "Legends" puis cocher la bonne case ; attention une seule case à la fois doit être cochée !</i></small>
 </html>
 
 </div>  
