--- a/pages/page13.html
+++ b/pages/page13.html
@@ -1,7 +1,7 @@
  <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/3.15/themes/css/cartodb.css" />
 <div class="book-content">
- <iframe width="100%" height="450" frameborder="0" src="https://victoramoureux.carto.com/builder/37503b19-dd27-4bb7-b0f0-c18d010ef834/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
-    
+ <iframe width="100%" height="415" frameborder="0" src="https://victoramoureux.carto.com/builder/37503b19-dd27-4bb7-b0f0-c18d010ef834/embed" allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+    <i><small>NB : pour faire apparaître la carte souhaitée, sélectionnez-la dans l'option "Legends". Attention, ne cochez qu'une case à la fois !</i></small>
   </body>
 </html>
 
