--- a/pages/page7.html
+++ b/pages/page7.html
@@ -1,8 +1,8 @@
                                 <!-- Dataviz bubble -->
                   <div style="margin: 30px 30px 40px 30px;">
-			  <h4>Les goûts des Parisiens </h4></div>
+			  <h4>Répartition des documents les plus empruntés</h4></div>
                   <div id="tooltip"></div>
-                  <svg id="bubble" width="444" height="400" style="/* background: rgb(255, 255, 255); */"></svg>
+                  <svg id="bubble" width="420" height="450" style="/* background: rgb(255, 255, 255); */"></svg>
                      
             
      <!-- Bubble dataviz JavaScript -->
