--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
+    <meta name="description" content="blablabla">
     <meta name="author" content="">
 
     <title>Dataviz - BibliParis</title>
