--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@ yepnope({
 		 <h4 class="text-uppercase mb-4">Mentions</h4>
 		  <p class="lead mb-0">
 		    Données&nbsp;:&nbsp;<a href="https://opendata.paris.fr/explore/?sort=modified&q=bibliothèque">Open Data Paris</a> <br>
-		    Cartes&nbsp;:&nbsp;<a href="http://carto.com/">CARTO</a> <br>
+		    Cartes&nbsp;:&nbsp;<a href="http://carto.com/">CARTO</a> <br> CECI EST UN ESSAI
 		    Template&nbsp;:&nbsp;<a href="http://getbootstrap.com/">Bootstrap</a> <br>
 		  Flipbook&nbsp;:&nbsp;<a href="http://www.turnjs.com/#samples/steve-jobs" >turn.js</a> <br>
 		    Icônes&nbsp;:&nbsp;<a href="http://https://thenounproject.com/">The NOUN Project</a>
