--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
+    <meta property="og:description" content="Vive les bibliothèques !">
     <meta name="author" content="">
 
     <title>Dataviz - BibliParis</title>
