--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@ yepnope({
 		 <h4 class="text-uppercase mb-4">Mentions</h4>
 		  <p class="lead mb-0">
 		    Données&nbsp;:&nbsp;<a href="https://opendata.paris.fr/explore/?sort=modified&q=bibliothèque">Open Data Paris</a> <br>
+		    Dataviz en bulles&nbsp;:&nbsp;<a href="https://bl.ocks.org/mbostock/467f1a0db47753cc630e">Blog Mike Bostock</a> <br>
 		    Cartes&nbsp;:&nbsp;<a href="http://carto.com/">CARTO</a> <br>
 		    Template&nbsp;:&nbsp;<a href="http://getbootstrap.com/">Bootstrap</a> <br>
 		  Flipbook&nbsp;:&nbsp;<a href="http://www.turnjs.com/#samples/steve-jobs" >turn.js</a> <br>
