--- a/pages/page7.html
+++ b/pages/page7.html
@@ -1,6 +1,6 @@
                                 <!-- Dataviz bubble -->
                   <div style="margin: 15px 15px 25px 15px;">
-			  Répartition des références les plus empruntés en 2017</div>
+			  Répartition des références les plus empruntées en 2017</div>
                   <div id="tooltip"></div>
                   <svg id="bubble" width="444" height="700" style="/* background: rgb(255, 255, 255); */"></svg>
                      
