--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'GA_TRACKING_ID');
+  gtag('config', 'UA-118067557-1');
 </script>
 	
        <!-- Bootstrap core JavaScript -->
