--- a/pages/page7.html
+++ b/pages/page7.html
@@ -1,8 +1,8 @@
                                 <!-- Dataviz bubble -->
                   <div style="margin: 15px 15px 25px 15px;">
-			  <b>Répartition des références les plus empruntées en 2017</b></div>
+			  <p style="font-style: italic"><b>Répartition des références les plus empruntées en 2017</b></p></div>
                   <div id="tooltip"></div>
-                  <svg id="bubble" width="444" height="700" style="/* background: rgb(255, 255, 255); */"></svg>
+                  <svg id="bubble" width="417" height="700" style="/* background: rgb(255, 255, 255); */"></svg>
                      
             
      <!-- Bubble dataviz JavaScript -->
