--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
-    <meta property="og:description" content="Vive les bibliothèques !">
+    <meta property="og:description" content="Quelle(s) histoire(s) de Paris les bibliothèques de prt nous racontent-elles ? Les bibliothèques sont elles toujours utiles ? Qui bénéficie le plus des bibliothèques ? Retrouvez nos réponses dans ce projet Dataviz !">
     <meta name="author" content="">
 
     <title>Dataviz - BibliParis</title>
