--- a/pages/page14.html
+++ b/pages/page14.html
@@ -5,7 +5,7 @@
                                 <br>
                                   <b>Hormis les 7e et 8e arrondissements</b>, qui ne comptent aucune bibliothèque accessible aux personnes handicapées, et le 9e ou 30 % des bibliothèques leur sont accessibles, <b>chaque arrondissement compte au moins 50 % de ses bibliothèques accessibles aux personnes à mobilité réduite.</b> <br>
                                 <br>
-                                Mention spéciale au 1er arrondissement (1/1 bibliothèque de prêt accessible) et surtout <b>au 13e arrondissement (3/3 accessibles)</b> !
+                                Mention spéciale aux arrondissements qui ont 100 % de bibliothèques accessibles : arrondissements du centre (1/2/3/4/6 - la bibliothèque de prêt de chaque arrondissement est accessible) et <b>13e arrondissement (3/3 accessibles)</b> !
                                 <br>
                                 </p>
                       </div>
